[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/TimeEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Timer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/button-size-40.tres" type="DynamicFont" id=4]

[node name="Timer" type="Control"]
margin_top = 74.0
margin_right = 430.0
margin_bottom = 134.0
rect_min_size = Vector2( 300, 60 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 430.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 4 )
text = "00:00"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_right = 430.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 5
size_flags_vertical = 4
alignment = 1

[node name="MinEdit" parent="HBoxContainer" instance=ExtResource( 1 )]

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 208.0
margin_right = 221.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 4 )
text = ":"
align = 1
valign = 1

[node name="SecEdit" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 225.0
margin_right = 345.0
align = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
